--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            <link rel="stylesheet" href="../css/mystyle.css">
+            <link rel="stylesheet" href="mystyle.css">
 
             <!-- Google Fonts -->
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
@@ -44,10 +44,10 @@
                     <div class="row text-white" style="background-color:#51716B">
                         <div class="col-4 text-left">(702) 286-7242</div>
                         <div class="col text-right">
-                            <img src="../images/icon%20fb.png" height="20px"> 
-                            <img src="../images/icon%20ig.png" height="20px"> 
-                            <img src="../images/icon%20tw.png" height="20px"> 
-                            <img src="../images/icon%20yt.png" height="20px">
+                            <img src="icon%20fb.png" height="20px"> 
+                            <img src="icon%20ig.png" height="20px"> 
+                            <img src="icon%20tw.png" height="20px"> 
+                            <img src="icon%20yt.png" height="20px">
                         </div>
                     </div>
 
@@ -61,7 +61,7 @@
 
                       <!-- Navbar brand -->
                       <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                        <img src="../images/Seedling%20Theatre%20Logo%20Full%20Transparent.png"
+                        <img src="Seedling%20Theatre%20Logo%20Full%20Transparent.png"
                           height="30px"
                           alt="Logo"
                           loading="lazy">
